usebox z-index fix and preview onload event (#6783)

--- a/scopes/ui-foundation/use-box/dropdown/dropdown.module.scss
+++ b/scopes/ui-foundation/use-box/dropdown/dropdown.module.scss
@@ -1,15 +1,13 @@
 @import '~@teambit/base-ui.layout.breakpoints/_breakpoints.scss';
 @import '~@teambit/ui-foundation.ui.constants.z-indexes/z-indexes.module.scss';
 
-.useBox {
-  z-index: $modal-z-index;
-}
 
 .menu {
   padding: 0;
   font-size: var(--bit-p-xs, 14px);
   border-radius: 6px;
   width: 400px;
+  z-index: $topBar-zIndex;
 }
 
 .placeholder {
